--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Juan Berrios — Diseñador & Desarrolador Web</title>
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Juan Berrios" />
+
+    <meta name="twitter:domain" content="juanberrios.com" />
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/favicon/apple-touch-icon-57x57.png"/>
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/favicon/apple-touch-icon-114x114.png"/>
